solved, align items has to be chained to flex

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,18 +2,33 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /**/
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: large;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /**/
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /**/
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
@@ -25,4 +40,48 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  /**/
+  padding: 10px;
+  margin: 20px;
+  height: 300px;
+  width: 350px;
+}
+
+/**/
+.sideandcontent {
+  height: 100%;
+  display: flex;
+  flex: 1 1 auto; 
+}
+
+/**/
+a {
+  text-decoration: none;
+  color: white;
+  /*margin: 15px;*/
+}
+
+/**/
+ul {
+  list-style: none;
+}
+
+/**/
+.content {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 40px;
+}
+
+/**/
+.sidebar {
+  flex: none;
+  padding: 16px;
+}
+
+/**/
+li {
+  margin: 15px;
+  font-size: 24px;
 }
